tests/NormalTests/paczka1/small_fuzzy/84486227.err
Error in line 2: 0NHM6nAELGc A515 55,7
Error in line 10: lfLj S975 12,5
